[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Levels.gd" type="Script" id=1]
[ext_resource path="res://ParallaxBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/GameTitle.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/new_theme.tres" type="Theme" id=5]
[ext_resource path="res://UI/ButtonTheme.tres" type="Theme" id=6]
[ext_resource path="res://UI/poco/Poco.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=10]
size = 60
font_data = ExtResource( 7 )

[node name="Levels" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="VBoxContainer2" parent="." instance=ExtResource( 3 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -150.0
margin_right = 100.0
margin_bottom = 150.0
alignment = 1

[node name="Level1" type="Button" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 72.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.27451, 0.819608, 0.141176, 1 )
custom_colors/font_color_pressed = Color( 0.682353, 0.839216, 0.65098, 1 )
custom_fonts/font = SubResource( 10 )
text = "Level 1"

[node name="Level2" type="Button" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 200.0
margin_bottom = 148.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 10 )
disabled = true
text = "Level 2"

[node name="Level3" type="Button" parent="VBoxContainer"]
margin_top = 152.0
margin_right = 200.0
margin_bottom = 224.0
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 10 )
disabled = true
text = "Level 3"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 228.0
margin_right = 200.0
margin_bottom = 300.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 10 )
text = "Back"

[node name="ParallaxBackground" parent="." instance=ExtResource( 2 )]
offset = Vector2( 0, 125 )
transform = Transform2D( 1, 0, 0, 1, 0, 125 )

[connection signal="pressed" from="VBoxContainer/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="VBoxContainer/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="VBoxContainer/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
